--- a/exercises.html
+++ b/exercises.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ll<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -7,6 +7,6 @@
     <script src="dP.js" defer></script>
 </head>
 <body>
-    <h1></h1>
+    <h1>hello</h1>
 </body>
 </html>
